[tool.black]
line-length = 79

[tool.isort]
include_trailing_comma = true
line_length = 79
multi_line_output = 3
profile = "black"

[tool.poetry]
name = "alpaca-lora"
version = "0.1.0"
description = ""
authors = ["marco@38911.net`"]
readme = "README.md"
packages = [{include = "alpaca_lora"}]

[tool.poetry.dependencies]
python = "^3.10"
accelerate = "^0.18.0"
appdirs = "^1.4.4"
loralib = "^0.1.1"
bitsandbytes = "^0.37.2"
black = {extras = ["jupyter"], version = "^23.3.0"}
datasets = "^2.11.0"
fire = "^0.5.0"
peft = {git = "https://github.com/huggingface/peft.git"}
transformers = {git = "https://github.com/huggingface/transformers.git"}
sentencepiece = "^0.1.97"
gradio = "^3.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
